// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render alert with type 1`] = `
<div
  class="happy-alert happy-alert-info"
>
  info
</div>
`;

exports[`<Alert /> should render alert with type 2`] = `
<div
  class="happy-alert happy-alert-warning"
>
  warning
</div>
`;

exports[`<Alert /> should render alert with type 3`] = `
<div
  class="happy-alert happy-alert-positive"
>
  positive
</div>
`;

exports[`<Alert /> should render alert with type 4`] = `
<div
  class="happy-alert happy-alert-negative"
>
  negative
</div>
`;

exports[`<Alert /> should render default 1`] = `
<div>
  <div
    class="happy-alert happy-alert-info"
  >
    default
  </div>
</div>
`;
